--- a/index.html
+++ b/index.html
@@ -6,10 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dictionary app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
 </head>
 
 <body>
-    <script src="style.css"></script>
+    
+    <audio  class="sound" id="sound"></audio>
+    <div class="container">
+        <div class="search-box">
+            <input type="text" placeholder="Type the word here..." id="inp-word">
+
+            <button id="search-btn">search</button>
+        </div>
+
+        <div class="result" id="result">
+            <div class="word">
+                <h3>
+                    sample
+                </h3>
+                <button onclick="playsound()">
+                    <i class="fa-solid fa-volume-high" ></i>
+                </button>
+            </div>
+
+            <div class="detail">
+                <p>pos </p>
+                <p> /sampl</p>
+            </div>
+            <p class="word-meaning">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aperiam, officia ducimus quas ut
+                totam
+            </p>
+
+            <p class="word-example">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, odio.
+            </p>
+
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/4a3b6efd5c.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
